feat: 优化pr内容